--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
   <h1>My Schedule Today</h1>
   <ol>
-    <li>Period 1 is AAAA </li>
-    <li>Period 2 is BBBB </li>
-    <li>Period 3 is CCCC </li>
-    <li>Period 4 is DDDD </li>  
-    <li>Period 5 is EEEE </li>  
-    <li>Period 6 is FFFF </li>  
-    <li>Period 7 is GGGG </li>  
-    <li>Period 8 is HHHH </li>  
-    <li>Period 9 is JJJJ </li>  
-    <li>Period 10 is KKKK </li>  
+    <li>Period 1 is Japanese 5 </li>
+    <li>Period 2 is Web Dev </li>
+    <li>Period 3 is African </li>
+    <li>Period 4 is Bioethics </li>  
+    <li>Period 5 is Yoga & Fitness </li>  
+    <li>Period 6 is Lunch </li>  
+    <li>Period 7 is US History </li>  
+    <li>Period 8 is Adv Drwing Grphic </li>  
+    <li>Period 9 is Photography </li>  
+    <li>Period 10 is Photography </li>  
   </ol>
 
   
